API clean-up -addmods ALL-MODULE-PATH